# ComfyUI-SaveImageWithMetaData-OptionalEmbedWorkflow

./: README.md  pyproject.toml
py/: __init__.py
py/defs/: __init__.py
py/nodes/: node.py
